k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: hvac-django
  namespace: hvac

spec:
  replicas: 2

  selector:
    matchLabels:
      app: hvac-django

  template:
    metadata:
      labels:
        app: hvac-django

    spec:
      containers:
        - name: hvac-django
          image: zenggshash/hvac-master:v1
          imagePullPolicy: Always

          ports:
            - containerPort: 8000
