k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: hvac-service
  namespace: hvac

spec:
  selector:
    app: hvac-django

  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000

  type: ClusterIP
